--- a/app/assets/package.json
+++ b/app/assets/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
     "yarn": "^1.21.1"
   },
   "devDependencies": {
