--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -36,6 +36,7 @@ services:
       - prod_deps:/app/deps/
       - node_deps:/app/assets/node_modules
       - letsencrypt:/etc/letsencrypt/
+      - "./tls/dhparam.pem:/etc/dhparam.pem"
     ports:
       - "0.0.0.0:80:80"
       - "0.0.0.0:443:443"
