Registration API working and adding users; still need to create section roles

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -30,6 +30,9 @@ services:
       - CAS_CALLBACK_URL=${CAS_CALLBACK_URL}
       - SECRET_KEY_BASE=${SECRET_KEY_BASE}
       - DOMAIN=${DOMAIN}
+      - REGISTRATION_API_URL=${REGISTRATION_API_URL}
+      - REGISTRATION_API_USERNAME=${REGISTRATION_API_USERNAME}
+      - REGISTRATION_API_PASSWORD=${REGISTRATION_API_PASSWORD}
     volumes:
       - type: bind
         source: ./app
