--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,9 @@ services:
       - CAS_SERVICE_VALIDATE_BASE_URL=${CAS_SERVICE_VALIDATE_BASE_URL}
       - CAS_CALLBACK_URL=${CAS_CALLBACK_URL}
       - SECRET_KEY_BASE=${SECRET_KEY_BASE}
+      - REGISTRATION_API_URL=${REGISTRATION_API_URL}
+      - REGISTRATION_API_USERNAME=${REGISTRATION_API_USERNAME}
+      - REGISTRATION_API_PASSWORD=${REGISTRATION_API_PASSWORD}
     volumes:
       - type: bind
         source: ./app
@@ -65,6 +68,9 @@ services:
       - CAS_SERVICE_VALIDATE_BASE_URL=${CAS_SERVICE_VALIDATE_BASE_URL}
       - CAS_CALLBACK_URL=${CAS_CALLBACK_URL}
       - SECRET_KEY_BASE=${SECRET_KEY_BASE}
+      - REGISTRATION_API_URL=${REGISTRATION_API_URL}
+      - REGISTRATION_API_USERNAME=${REGISTRATION_API_USERNAME}
+      - REGISTRATION_API_PASSWORD=${REGISTRATION_API_PASSWORD}
     volumes:
       - type: bind
         source: ./app
