--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -74,4 +74,20 @@ services:
       - letsencrypt:/etc/letsencrypt/
       - "./certbot/run.sh:/run.sh"
       - acme_challenge:/tmp/webroot/.well-known/acme-challenge/
-
+  backup:
+    image: yellowtrex/pgs3backup
+    links:
+      - db
+    environment:
+      - SCHEDULE=${BACKUP_SCHEDULE}
+      - S3_REGION=${BACKUP_S3_REGION}
+      - S3_ACCESS_KEY_ID=${BACKUP_S3_ACCESS_KEY_ID}
+      - S3_SECRET_ACCESS_KEY=${BACKUP_S3_SECRET_ACCESS_KEY}
+      - S3_BUCKET=${BACKUP_S3_BUCKET}
+      - S3_PREFIX=${BACKUP_S3_PREFIX}
+      - S3_OBJECT_NAME=${BACKUP_S3_OBJECT_NAME}
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DATABASE=${POSTGRES_DB}
