Basic counter in liveview

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,6 +35,7 @@ services:
       - REGISTRATION_API_URL=${REGISTRATION_API_URL}
       - REGISTRATION_API_USERNAME=${REGISTRATION_API_USERNAME}
       - REGISTRATION_API_PASSWORD=${REGISTRATION_API_PASSWORD}
+      - SIGNING_SALT=${SIGNING_SALT}
     volumes:
       - type: bind
         source: ./app
@@ -71,6 +72,7 @@ services:
       - REGISTRATION_API_URL=${REGISTRATION_API_URL}
       - REGISTRATION_API_USERNAME=${REGISTRATION_API_USERNAME}
       - REGISTRATION_API_PASSWORD=${REGISTRATION_API_PASSWORD}
+      - SIGNING_SALT=${SIGNING_SALT}
     volumes:
       - type: bind
         source: ./app
