--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -33,6 +33,11 @@ services:
       - REGISTRATION_API_URL=${REGISTRATION_API_URL}
       - REGISTRATION_API_USERNAME=${REGISTRATION_API_USERNAME}
       - REGISTRATION_API_PASSWORD=${REGISTRATION_API_PASSWORD}
+      - LDAP_HOST=${LDAP_HOST}
+      - LDAP_PORT=${LDAP_PORT}
+      - LDAP_SSL=${LDAP_SSL}
+      - LDAP_USER=${LDAP_USER}
+      - LDAP_PASS=${LDAP_PASS}
     volumes:
       - type: bind
         source: ./app
