--- a/app/assets/package.json
+++ b/app/assets/package.json
@@ -7,9 +7,12 @@
   },
   "dependencies": {
     "file-loader": "^6.0.0",
+    "node-sass": "^4.13.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "yarn": "^1.22.0"
   },
   "devDependencies": {
@@ -21,7 +24,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "terser-webpack-plugin": "^2.3.2",
-    "webpack": "4.41.5",
+    "webpack": "^4.41.5",
     "webpack-cli": "^3.3.2"
   }
 }
