--- a/app/assets/package.json
+++ b/app/assets/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "file-loader": "^6.0.0",
+    "flatpickr": "^4.6.3",
     "node-sass": "^4.13.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
