--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -38,6 +38,7 @@ services:
       - LDAP_SSL=${LDAP_SSL}
       - LDAP_USER=${LDAP_USER}
       - LDAP_PASS=${LDAP_PASS}
+      - SIGNING_SALT=${SIGNING_SALT}
     volumes:
       - type: bind
         source: ./app
